--- a/client/style/style.css
+++ b/client/style/style.css
@@ -105,6 +105,64 @@ i.fa {
   border: 1px solid red;
 }
 
+/* CAROUSEL */
 .carousel-container {
-  border: 1px solid red;
+  border: 3px solid blue;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-content: center;
+  min-height: 85vh;
+}
+
+.carousel-container > img {
+  /*position: absolute;*/
+  max-height: 65vh;
+}
+
+.carousel-container div:first-child {
+  margin-right: auto;
+}
+
+.carousel-container div:last-child {
+  margin-left: auto;
+}
+
+.arrow {
+  color: blue;
+  z-index: 1;
+}
+
+.left-arrow {
+  position: absolute;
+  /*align-self: flex-start;*/
+}
+
+.right-arrow {
+  position: absolute;
+  /*align-self: flex-end;*/
+  /*left: 100%;*/
+  right: 100px;
+  z-index: 1;
+  /*margin-bottom: auto;*/
+}
+
+.carousel-circle-container {
+  position: absolute;
+  display: flex;
+  flex-direction: row;
+  bottom: 10vh;
+  justify-content: space-between;
+  z-index: 1;
+}
+
+.circle {
+  max-width: 30px;
+  max-height: 30px;
+  border-radius: 100px;
+  background-color: lightgrey;
+}
+
+.circle.active {
+  background-color: black;
 }
