--- a/client/style/style.css
+++ b/client/style/style.css
@@ -137,12 +137,10 @@ i.fa {
 .project .project-name {
   color: red;
   font-size: 20px;
-  position: absolute;
+  position: relative;
   margin: auto;
   top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  -ms-transform: translate(-50%, -50%);
+  z-index: 1;
 }
 
 .project-overlay {
