--- a/client/style/style.css
+++ b/client/style/style.css
@@ -108,7 +108,7 @@ i.fa {
   border: 1px solid red;
   display: flex;
   flex-wrap: wrap;
-  justify-content: center;
+  justify-content: space-around;
 }
 
 .home-portfolio-container .project {
@@ -126,12 +126,19 @@ i.fa {
   flex-direction: column;
   justify-content: space-around;
   align-items: center;
-  width: 35vw;
-  height: 35vh;
+  width: 15vw;
+  height: 15vw;
+}
+
+.project-image {
+  width: inherit;
+  height: inherit;
+  max-height: inherit;
 }
 
 .project-image img {
-  width: 100%
+  width: 100%;
+  height: 100%;
 }
 
 .project .project-name {
