--- a/client/style/style.css
+++ b/client/style/style.css
@@ -188,18 +188,16 @@ i.fa {
   display: flex;
   overflow: hidden;
   flex-direction: row;
+  align-self: center;
+  width: 50vw;
+  left: 25%;
+  right: 25%;
 }
 
 .carousel-screenshots img {
-  max-height: 65vh;
-}
-
-.carousel-container div:first-child {
-  margin-right: auto;
-}
-
-.carousel-container div:last-child {
-  margin-left: auto;
+  max-width: 50vw;
+  display: block;
+  margin: 0 auto;
 }
 
 .arrow {
@@ -209,16 +207,16 @@ i.fa {
 
 .left-arrow {
   position: absolute;
-  /*align-self: flex-start;*/
+  top: 50%;
+  left: 10%;
+  z-index: 1;
 }
 
 .right-arrow {
   position: absolute;
-  /*align-self: flex-end;*/
-  /*left: 100%;*/
-  right: 100px;
+  top: 50%;
+  right: 10%;
   z-index: 1;
-  /*margin-bottom: auto;*/
 }
 
 .carousel-description-container {
@@ -240,8 +238,6 @@ i.fa {
 .carousel-circle-container {
   display: flex;
   flex-direction: row;
-  bottom: 10vh;
-  justify-content: space-between;
   z-index: 1;
 }
 
