--- a/client/style/style.css
+++ b/client/style/style.css
@@ -239,6 +239,7 @@ i.fa {
   display: flex;
   flex-direction: row;
   z-index: 1;
+  align-self: center;
 }
 
 .circle {
@@ -246,6 +247,7 @@ i.fa {
   max-height: 30px;
   border-radius: 100px;
   background-color: lightgrey;
+  margin: 2px;
 }
 
 .circle.active {
