--- a/client/style/style.css
+++ b/client/style/style.css
@@ -167,8 +167,29 @@ i.fa {
   font-size: 40px;
 }
 
-.project-entry img {
-  text-align: center;
+.projects {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.project-entry {
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+  border: 1px solid grey;
+  padding: 20px;
+  width: 75vw;
+  margin-bottom: 10vh;
+}
+
+.project-image {
+  width: 75vw;
+}
+
+.project-image img{
+  margin: 0 auto;
+  width: 100%;
 }
 
 .project-info {
@@ -177,6 +198,7 @@ i.fa {
   justify-content: center;
   align-items: center;
   padding: 10px;
+  width: inherit;
 }
 
 .project-name {
