--- a/client/style/style.css
+++ b/client/style/style.css
@@ -47,13 +47,14 @@ body {
 /* FOOTER */
 
 .footer-container {
-  border: 1px solid red;
-  min-width: 100vw;
+  left: 0;
+  min-width: 101vw;
   min-height: 15vh;
   display: flex;
   justify-content: center;
   margin: 5px;
   padding-top: 3vh;
+  background-color: lightgrey;
 }
 
 .footer-link {
@@ -114,20 +115,22 @@ body {
   display: flex;
   flex-direction: column;
   justify-content: space-between;
-  align-items: flex-start;
-  border: 1px solid red;
-  padding: 25px;
-  /*flex: 3; */
+  align-items: center;
   width: 33.33%;
-/*  min-width: 29%;
-  max-width: 30%;*/
+  padding: 0 25px 25px;
   box-sizing: border-box;
 }
 
-/*box-sizing: border-box;*/
+.home-content-image {
+  align-self: center;
+  width: 320px;
+
+}
+
 .home-content-entry img {
-  width: 75%;
-  height: auto;
+  width: 100%;
+  margin: 0 auto;
+  border: 2px solid black;
 }
 
 .home-content-entry a {
@@ -157,10 +160,12 @@ body {
   box-shadow: inset 0 0 0 2px rgba(0, 0, 0, 0.2);
 }
 
-.home-content-entry .btn:hover {
-  background-color: black;
-  color: white; 
-  box-shadow: 2px 2px 2px 1px rgba(0, 0, 0, 0.2);
+.home-content-entry .btn:hover { 
+  box-shadow: inset 0 0 0 2px rgba(0, 0, 0, 0.2);
+  text-decoration: none;
+  background-color: rgb(150, 150, 150);
+  transition: 0.5s;
+  color: white;
 }
 
 i.fa {
