--- a/client/style/style.css
+++ b/client/style/style.css
@@ -107,8 +107,6 @@ body {
   display: flex;
   justify-content: flex;
   flex-wrap: wrap;
-  /*height: 90vh;*/
-  /*width: 100%;*/
 }
 
 .home-content-entry {
@@ -124,25 +122,28 @@ body {
 .home-content-image {
   align-self: center;
   width: 320px;
-
 }
 
 .home-content-entry img {
   width: 100%;
   margin: 0 auto;
-  border: 2px solid black;
+  border: 2px solid rgba(0, 0, 0, 0.2);
+  box-shadow: 0 0 0 2px black;
+  border-radius: 200px; 
 }
 
 .home-content-entry a {
-  display: flex;
   width: 100%;
   text-decoration: none;
-  justify-content: center;
+  text-align: center;
+  color: black;
   align-items: space-between;
 }
 
 .home-content-entry p {
+  text-align: center;
   padding: 5px;
+  width: 320px;
 }
 
 .home-content-entry > * {
@@ -153,11 +154,11 @@ body {
   display: flex;
   justify-content: center;
   align-items: center;
-  width: 100%;
+  width: 280px;
   min-height: 45px; 
-  border: 1px solid black;
+  border: 2px solid rgba(0, 0, 0, 0.2);
   border-radius: 5px; 
-  box-shadow: inset 0 0 0 2px rgba(0, 0, 0, 0.2);
+  box-shadow: 0 0 0 2px black;
 }
 
 .home-content-entry .btn:hover { 
