--- a/client/style/style.css
+++ b/client/style/style.css
@@ -242,9 +242,16 @@ i.fa {
   height: 60vh;
 }
 
-.about-me-image {
+.about-me-image img {
   float: right;
-  margin: 0 35px 0 35px;
+  margin: 0 35px 8px 35px;
+  border-radius: 200px;
+  border: 2px solid rgba(0, 0, 0, 0.2);
+  box-shadow: 0 0 0 2px black;
 }
 
+.about-me-summary p {
+  text-indent: 3em;
+  word-wrap: break-word;
+}
 
