--- a/client/style/style.css
+++ b/client/style/style.css
@@ -245,9 +245,6 @@ i.fa {
   margin: 0 0 4px;
 }
 
-.project-description {
-}
-
 .project-stack {
   font-size: .9em;
   font-style: italic;
@@ -259,9 +256,13 @@ i.fa {
 }
 
 .about-me-content-container {
-  text-align: center;
   padding: 0 10vw 10vh;
   min-height: 60vh;
+}
+
+.about-me-summary {
+  padding: 20px;
+  box-shadow: 2px 2px 2px 2px rgba(0, 0, 0, 0.2);
 }
 
 .about-me-image img {
