--- a/client/style/style.css
+++ b/client/style/style.css
@@ -1,19 +1,21 @@
-body {
+html, body {
+  max-width: 100%;
   margin: 0;
   font-family: 'Open Sans', sans-serif;
+  overflow-x: hidden
 }
 
 /* NAVIGATION BAR */
 .nav-bar-container {
-  min-width: 100vw;
+  max-width: 100vw;
+  min-height: 10vh;
   display: flex; 
   justify-content: space-between;
-  max-height: 15vh;
 }
 
 .nav-links {
   display: flex;
-  min-width: 75vw;
+  width: 100%;
 }
 
 .nav-link {
@@ -23,18 +25,14 @@ body {
   align-items: center; 
   text-decoration: none;
   color: black;
+  padding: 5px;
 }
 
 .logo {
-  align-self: flex-start;
-  max-height: 15vh;
-  max-width: 100%;
-}
-
-.logo img {
-  max-height: 10vh;
-  max-width: 25vw;
-  padding: 0 5vw;
+  font-family: 'Yellowtail', cursive;
+  font-size: 2rem;
+  color: black;
+  text-decoration: none;
 }
 
 .nav-link:hover {
@@ -44,17 +42,21 @@ body {
   color: white;
 }
 
-/* FOOTER */
+.logo:hover {
+  background-color: white;
+  transition: 0.5s;
+  color: black;
+}
 
+/* FOOTER */
 .footer-container {
-  left: 0;
-  min-width: 101vw;
+  min-width: 100vw;
   min-height: 15vh;
   display: flex;
   flex-direction: column;
   justify-content: space-around;
   align-items: center;
-  margin: 5px;
+  margin: 5px 0;
   padding-top: 3vh;
   background-color: lightgrey;
 }
@@ -83,8 +85,7 @@ body {
 }
 
 .banner-container img {
-  width: 100vw;
-  /*height: auto;*/
+  min-width: 100vw;
   max-height: 90vh;
   margin: 0 auto;
 }
@@ -280,6 +281,8 @@ i.fa {
 
 .contact-me-content-container {
   display:flex;
+  flex-direction: column;
   justify-content: center;
   align-items: center;
+  padding: 0 0 20vh;
 }
